--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tailwindcss/vite": "^4.1.12",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^11.0.3",
+    "groq-sdk": "^0.30.0",
     "lucide-react": "^0.540.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
